<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"

    >


    <LinearLayout
        android:layout_width="300dp"
        android:orientation="vertical"
        android:layout_height="500dp"
        android:background="@drawable/dialog_shape_bg"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"

        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_xieyi"
            android:textColor="#242424"
            android:textSize="18dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cdcdcd"
            android:layout_marginLeft="20dp"
            ></View>

        <TextView
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xieyi_msg"
            android:layout_marginRight="20dp"
            android:textColor="#242424"
            />
        <TextView
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/host"
            android:layout_marginRight="20dp"
            android:textColor="#242424"
            android:gravity="center"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/youxiang"

            android:textColor="#242424"
            android:layout_alignParentRight="true"
            />
        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            >

            <TextView
                android:id="@+id/tv_no"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/notongyi"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#242424"
                />
            <TextView
                android:id="@+id/tv_yes"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/tongyi"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#20A0FF"
                />

        </LinearLayout>
        </LinearLayout>
 </ScrollView>
    </LinearLayout>

</LinearLayout>
