<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FAFAFA"
    >

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_marginTop="60dp"
        >

        <myapplication66.yanglh6.example.com.textactivity.view.CircleImageView
            android:id="@+id/img_left"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/head_portrait"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <TextView
                android:id="@+id/left_name"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"


                />
            <TextView
                android:id="@+id/left_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                />


        </LinearLayout>
        </LinearLayout>


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_marginTop="15dp"
       >
       
       <TextView
           android:id="@+id/tv_left_networks"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:drawableLeft="@mipmap/networks"
           android:text="@string/network_configuration"
           android:gravity="fill_vertical"
           android:drawablePadding="20dp"
           android:layout_marginLeft="20dp"
           />
       <TextView
           android:id="@+id/tv_left_recharge"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:drawableLeft="@mipmap/recharge"
           android:text="@string/debit_note"
           android:gravity="fill_vertical"
           android:layout_marginTop="10dp"
           android:drawablePadding="20dp"
           android:layout_marginLeft="20dp"
           />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="horizontal"
           >
       <TextView
           android:id="@+id/tv_left_announcement"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:drawableLeft="@mipmap/announcement"
           android:text="@string/Bulletin_Board"
           android:gravity="fill_vertical"
           android:layout_marginTop="10dp"
           android:drawablePadding="20dp"
           android:layout_marginLeft="20dp"
           />
       <TextView
          android:id="@+id/tv_count"
           android:layout_width="30dp"
           android:layout_height="30dp"
           android:text="1"
           android:gravity="center"
           android:layout_marginTop="10dp"
           android:drawablePadding="20dp"
           android:background="@drawable/text_bg"
           android:textColor="#FFFFFF"
          android:visibility="gone"
           />

       </LinearLayout>
       <TextView
           android:id="@+id/tv_left_msg"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:drawableLeft="@mipmap/video"
           android:text="@string/msg"
           android:gravity="fill_vertical"
           android:layout_marginTop="10dp"
           android:drawablePadding="20dp"
           android:layout_marginLeft="20dp"
           />
       <TextView
           android:id="@+id/tv_left_video"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:drawableLeft="@mipmap/video"
           android:text="@string/video_course"
           android:gravity="fill_vertical"
           android:layout_marginTop="10dp"
           android:drawablePadding="20dp"
           android:layout_marginLeft="20dp"
           />
       <TextView
           android:id="@+id/tv_left_doctors_prescription"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:drawableLeft="@mipmap/video"
           android:text="@string/doctors_prescription"
           android:gravity="fill_vertical"
           android:layout_marginTop="10dp"
           android:drawablePadding="20dp"
           android:layout_marginLeft="20dp"
           />
       <TextView
           android:id="@+id/tv_left_topic"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:drawableLeft="@mipmap/topic"
           android:text="@string/System_answer"
           android:gravity="fill_vertical"
           android:layout_marginTop="10dp"
           android:drawablePadding="20dp"
           android:layout_marginLeft="20dp"
           />
       <TextView
           android:id="@+id/tv_left_set"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:drawableLeft="@mipmap/set"
           android:text="@string/re_user_name"
           android:gravity="fill_vertical"
           android:layout_marginTop="10dp"
           android:drawablePadding="20dp"
           android:layout_marginLeft="20dp"

           />

   </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_left_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/logout"
            android:text="@string/login_out"
            android:gravity="fill_vertical"
            android:layout_marginTop="10dp"
            android:drawablePadding="20dp"
            android:layout_marginLeft="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            />

    </RelativeLayout>



</LinearLayout>
