<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >




    <include layout="@layout/header_bar"></include>




    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleTestSummary"
        android:textColor="#242424"
        />



    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewAnswer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        ></android.support.v7.widget.RecyclerView>



    <LinearLayout

        android:id="@+id/btn_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"

        >
    
    <Button
        android:id="@+id/submit_btn"
        android:layout_marginTop="20dp"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/tidaan"
        android:enabled="false"
        android:textColor="#FFF"
        android:background="@drawable/btn_bgs"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daan_btn"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        />
    </LinearLayout>


</LinearLayout>
