<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFF"
    android:orientation="vertical"
    >




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="300dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Urine_output"
                    android:textColor="#242424"

                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/onclick_days"
                    android:textSize="12sp"
                    android:visibility="gone"
                    />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="10dp"
                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/The_mean_of_urine"
                    android:textSize="12sp"
                    />


                <TextView
                    android:id="@+id/tv_mean_ultrafiltration_Urine_output"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_marginLeft="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Difference_of_urine"
                    android:layout_marginLeft="20dp"
                    />


                <TextView
                    android:id="@+id/tv_Difference_of_urine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_marginLeft="10dp"
                    />

                <TextView
                    android:id="@+id/tv_liaoliang_yanse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rising"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/red"
                    />


                <TextView
                    android:id="@+id/tv_rising_urine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/red"
                    />


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <com.github.mikephil.charting.charts.LineChart
                    android:layout_marginTop="10dp"
                    android:id="@+id/LineChartTwo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    />

            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>
